#1231: Converted GetWorkflowSteps UC to extend BasePaginatedMultipleEntitiesCommand